--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,10 @@
 /* Ini file css */
 
+* {
+    font-family: Arial, Helvetica, sans-serif;
+    color: #141414;
+}
+
 .main-header {
     display: flex;
     justify-content: space-between;
@@ -19,17 +24,16 @@ nav {
 }
 
 .left-rounded {
-    border-radius: 12px 0 0 12px;
+    border-radius: 8px 0 0 8px;
 }
 
 .right-rounded {
-    border-radius: 0 12px 12px 0;
+    border-radius: 0 8px 8px 0;
 }
 
 nav>a {
-    border: 1px solid black;
+    border: 1px solid #bcbcbc;
     padding: 8px;
-    color: black;
     text-decoration: none;
 }
 
@@ -54,6 +58,20 @@ nav>a {
 .content {
     /* Opsinal */
     height: 500px;
+}
+
+#content-messages{
+    display: flex;
+    justify-content: space-around;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+}
+
+#male, #female {
+    width:fit-content
 }
 
 footer {
